--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,15 +1,39 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  /* border: 1px solid rgb(0, 0, 0) */
+ 
+}
+
+#root{
+
+display: flex;
+flex-direction: column;
+text-align: center;
+
+/* border: 1px solid rgb(0, 0, 0) */
+
+
+}
+
+html {
+  background: -webkit-linear-gradient(130deg, #2d3b66, #63d326);
+  background: -moz-linear-gradient(130deg, #2d3b66, #63d326);
+  background: -ms-linear-gradient(130deg, #2d3b66, #63d326);
+  background: -o-linear-gradient(130deg, #2d3b66, #63d326);
+  background: linear-gradient(130deg, #2d3b66, #63d326);
+
+
+  min-height:100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  /* border: 1px solid rgb(0, 0, 0) */
+
+  
 
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 
+}
