--- a/client/src/index.css
+++ b/client/src/index.css
@@ -34,6 +34,36 @@ html {
 
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 16px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgb(31, 29, 29);
+  border-radius: 2px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: rgb(51, 73, 53);
+  border-radius: 5px;
+  box-shadow: inset 0 0 5px rgb(31, 29, 29);
+
+}
+
+/*
+https://www.w3schools.com/howto/howto_css_custom_scrollbar.asp
+For webkit browsers, you can use the following pseudo elements to customize the browser's scrollbar:
+
+::-webkit-scrollbar the scrollbar.
+::-webkit-scrollbar-button the buttons on the scrollbar (arrows pointing upwards and downwards).
+::-webkit-scrollbar-thumb the draggable scrolling handle.
+::-webkit-scrollbar-track the track (progress bar) of the scrollbar.
+::-webkit-scrollbar-track-piece the track (progress bar) NOT covered by the handle.
+::-webkit-scrollbar-corner the bottom corner of the scrollbar, where both horizontal and vertical scrollbars meet.
+::-webkit-resizer the draggable resizing handle that appears at the bottom corner of some elements. */
 code {
 
 }
