--- a/client/src/components/PokeName/PokeName.module.css
+++ b/client/src/components/PokeName/PokeName.module.css
@@ -3,11 +3,12 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: 4.5vh;
+  justify-content: center;
 }
 
 #pokeName input {
   width: 98%;
-
   padding: 0;
   margin: 0;
 }
