--- a/client/src/App.module.css
+++ b/client/src/App.module.css
@@ -1,8 +1,11 @@
+/* @import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Slab:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+
 #ToCreatePoke {
   position: fixed;
-  top: 10vh;
-  right: 0px;
-  width: 16vw;
+  left: 2.7vw;
+  top: 50%;
+  transform: translatey(-50%);
 }
 
 #PokeName {
@@ -28,8 +31,6 @@ html {
 
 body {
   margin: 0;
-  font-family: "Bad Script", cursive;
-  font-family: "Gochi Hand", cursive;
   color: #e9e6e6;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -44,17 +45,16 @@ body {
 * {
   cursor: url(https://i.imgur.com/CpdoEln.png), auto;
   font-size: 20px;
-
+  font-weight: 500;
+  font-family: "Josefin Slab", serif;
   /* border: 1px solid rgb(21, 255, 0) */
 }
 
 button {
-  font-family: "Bad Script", cursive;
-  font-family: "Gochi Hand", cursive;
   color: #201d1d;
   border-radius: 7px;
   font-size: larger;
-  background-color: rgb(200, 209, 188);
+  background-color: rgb(226, 226, 226);
   transition: background-color 300ms;
   box-shadow: 0 0 0.2vmax 0.01vmax;
 }
@@ -64,8 +64,6 @@ button:hover {
 }
 
 select {
-  font-family: "Bad Script", cursive;
-  font-family: "Gochi Hand", cursive;
   color: #201d1d;
   border-radius: 10px;
   font-size: larger;
@@ -73,8 +71,6 @@ select {
 }
 
 input {
-  font-family: "Bad Script", cursive;
-  font-family: "Gochi Hand", cursive;
   color: #201d1d;
   border-radius: 7px;
   font-size: larger;
