--- a/client/src/components/Escaparate/Tarjeta/Tarjeta.module.css
+++ b/client/src/components/Escaparate/Tarjeta/Tarjeta.module.css
@@ -1,21 +1,23 @@
 #tarjeta {
   margin-left: 14px;
   margin-right: 14px;
+  margin: auto;
   margin-top: 14px;
-  background-color: rgba(250, 240, 230, 0.24);
+  background-color: rgba(250, 240, 230, 0.95);
   border-radius: 40px;
   display: block;
   font-size: 30px;
   color: rgb(12, 11, 11);
   transition: all 400ms;
   box-shadow: 0 0 0.5vmax 0.1vmax black;
+  padding-top: 1vh;
+  height: 42vh;
 }
 
 #tarjeta:hover {
   background-color: rgba(255, 255, 255, 0.63);
   transform: scale(1.05);
   transition: all 400ms;
-
   box-shadow: 0 0 0.9vmax 0.3vmax rgb(12, 43, 0);
 }
 
