--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,12 +17,13 @@ html {
   background: -ms-linear-gradient(130deg, #2d3b66, #63d326);
   background: -o-linear-gradient(130deg, #2d3b66, #63d326);
   background: linear-gradient(130deg, #2d3b66, #63d326);
-
   min-height: 100%;
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+
+  background-image: url(https://particles.js.org/images/background3.jpg);
   /* border: 1px solid rgb(0, 0, 0) */
 }
 
