--- a/client/src/components/Escaparate/Tarjeta/Tarjeta.module.css
+++ b/client/src/components/Escaparate/Tarjeta/Tarjeta.module.css
@@ -1,7 +1,4 @@
 #tarjeta {
-  margin-left: 14px;
-  margin-right: 14px;
-  margin: auto;
   margin-top: 14px;
   background-color: rgba(250, 240, 230, 0.95);
   border-radius: 40px;
@@ -12,6 +9,7 @@
   box-shadow: 0 0 0.5vmax 0.1vmax black;
   padding-top: 1vh;
   height: 42vh;
+  margin: 1vh 1vw;
 }
 
 #tarjeta:hover {
@@ -21,11 +19,13 @@
   box-shadow: 0 0 0.9vmax 0.3vmax rgb(12, 43, 0);
 }
 
-#tarjeta img {
+#img {
   transition: all 400ms;
+  filter: brightness(1.1) drop-shadow(0px 0px 0.2rem rgb(0, 0, 0));
 }
 
-#tarjeta img:hover {
+#img:hover {
   transform: scale(1.2);
+  filter: brightness(1.3) drop-shadow(0px 0px 0.3rem rgb(0, 0, 0));
   transition: all 400ms;
 }
