--- a/client/src/components/Form/Form.module.css
+++ b/client/src/components/Form/Form.module.css
@@ -1,6 +1,3 @@
-code {
-}
-
 input {
   outline: none;
 }
@@ -24,6 +21,81 @@ input.danger {
 #typesList {
   margin: 20px 0 20px 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(26%, 1fr));
-  grid-gap: 0%;
+  grid-template-columns: repeat(auto-fit, minmax(10%, 1fr));
+  grid-gap: 0% 14%;
+  background-color: rgba(255, 255, 255, 0.137);
+  padding: 1vh 1vw;
+  border-radius: 10px;
+}
+
+#typesList input {
+  background-color: black;
+}
+
+#formContainer {
+  margin: 1vh auto;
+  /* border: 1rem solid; */
+  border-radius: 1rem;
+  background-image: url(https://particles.js.org/images/background3.jpg);
+  padding: 1vmax;
+  box-shadow: 0 0 1rem 0.1rem black;
+}
+
+#form {
+  background-color: rgba(255, 255, 255, 0.377);
+  padding: 1vmax;
+  border-radius: 1rem;
+}
+
+#form * {
+  font-size: x-large;
+  color: black;
+  font-style: oblique;
+  font-weight: bolder;
+}
+
+#tittle {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+#label {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#inputContainer input {
+  width: 230%;
+  margin-left: 0.4vw;
+  outline: none;
+  border: none;
+  border-radius: 0.5rem;
+  box-shadow: 0 0 0;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  background: rgba(255, 255, 255, 0.61);
+  text-indent: 0.3vw;
+}
+
+#inputContainer {
+  display: flex;
+  flex-direction: column;
+}
+
+#someInputAndLabel {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin: 0.3vh 0;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 0.6rem;
+  border: 1px solid black;
+  padding: 0.1vw;
+}
+
+* {
+  /* border: 1px solid green; */
 }
