--- a/client/src/components/PokeName/PokeName.module.css
+++ b/client/src/components/PokeName/PokeName.module.css
@@ -11,4 +11,5 @@
   width: 98%;
   padding: 0;
   margin: 0;
+  background: url(https://st2.depositphotos.com/3769671/7957/v/600/depositphotos_79574646-stock-illustration-paper-texture-template.jpg);
 }
