--- a/client/src/components/ToCreatePoke/ToCreatePoke.modules.css
+++ b/client/src/components/ToCreatePoke/ToCreatePoke.modules.css
@@ -1,3 +1,28 @@
-#createPoke img {
-  transform: scale(100);
+#create_poke_01 {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  transition: all 300ms;
+  flex-direction: column;
+  /* border: 1px solid rgba(240, 55, 240, 0.315); */
+  border-radius: 2rem;
+  /* background-color: rgba(240, 255, 240, 0.315); */
+  padding: 1rem;
+}
+
+#create_poke_01:hover {
+  transition: all 300ms;
+  transform: scale(1.07);
+}
+
+#create_poke_01 img {
+  transition: all 300ms;
+  filter: drop-shadow(0px 0px 0.2rem rgb(255, 255, 255));
+  max-width: 16vw;
+}
+
+#create_poke_01:hover {
+  transition: all 400ms;
+  filter: brightness(1.2);
+  transform: scale(1.09);
 }
