--- a/client/src/components/PokeDetalle/PokeDetalle.module.css
+++ b/client/src/components/PokeDetalle/PokeDetalle.module.css
@@ -1,7 +1,7 @@
 #container {
-  box-shadow: 0 0 1rem 0.1rem black;
+  box-shadow: 0 0 1rem 0.1rem rgb(255, 255, 255);
   background: rgba(0, 0, 0, 0.85);
-  border-radius: 1rem;
+  border-radius: 7rem;
   width: 50vw;
   margin-top: 5vh;
 }
@@ -14,6 +14,9 @@
 }
 
 #container img {
-  margin: -2vh 0;
-  filter: drop-shadow(0px 0px 1.3rem rgb(255, 255, 255));
+  margin: -1vh 0;
+  filter: drop-shadow(0px 0px 0.7rem rgb(255, 255, 255));
+}
+
+#container {
 }
